sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:5: error: missing arguments for method swap in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
  while (gap>1 || swap == true){
                  ^AlgCombSort:6: error: reassignment to val
  	swap = false;
             ^